@startuml Entity-Relation
' Définition des stéréotypes pour les clés primaires et étrangères
!define PK(x) <b>x</b>
!define FK(x) <i>x</i>

' Définition des entités avec leurs attributs
entity "Company" as company {
  PK(id) : INT
  name : VARCHAR(100)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  contact_email : VARCHAR(50) <<unique>>
  contact_phone : VARCHAR(50)
}

entity "Client" as client {
  PK(id) : INT
  FK(company_id) : INT
  name : VARCHAR(100)
}

entity "ClientOrder" as client_order {
  PK(id) : INT
  FK(company_id) : INT
  FK(client_id) : INT
  order_number : VARCHAR(20) <<unique>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  expected_delivery_date : TIMESTAMP
  status : VARCHAR(50)
}

entity "Delivery" as delivery {
  PK(id) : INT
  FK(tour_id) : INT
  FK(company_id) : INT
  FK(client_order_id) : INT
  FK(geocoded_address_id) : INT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  status : VARCHAR(50)
  expected_delivery_date : TIMESTAMP
  actual_delivery_date : TIMESTAMP
}

entity "Delivery Product" as delivery_product {
  PK(id) : INT
  FK(product_id) : INT
  FK(delivery_id) : INT
  quantity : NUMERIC(14,3)
  temperature : NUMERIC(5,2)
}

entity "Driver" as driver {
  PK(id) : INT
  FK(company_id) : INT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  first_name : VARCHAR(50)
  last_name : VARCHAR(50)
  license_number : VARCHAR(50)
}

entity "Geocoded Address" as geocoded_address {
  PK(id) : INT
  FK(company_id) : INT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  street_name : VARCHAR(255)
  full_address : TEXT
  city : VARCHAR(255)
  postal_code : VARCHAR(20)
  department : VARCHAR(10)
  country : VARCHAR(100)
  latitude : NUMERIC(10,8)
  longitude : NUMERIC(11,8)
  street_number : VARCHAR(10)
  is_verified : BOOLEAN
  source : VARCHAR(20)
}

entity "Product" as product {
  PK(id) : INT
  FK(company_id) : INT
  name : VARCHAR(100)
  description : TEXT
  weight_kg : NUMERIC(10,3)
  is_hazardous : BOOLEAN
  hazard_class : VARCHAR(50)
  adr_compliant : BOOLEAN
  type : VARCHAR(255)
  density_kg_per_liter : NUMERIC(10,3)
  is_temperature_sensitive : BOOLEAN
  thermal_expansion_coefficient_per_degree_celsius : NUMERIC(10,6)
  length_cm : NUMERIC(10,2)
  width_cm : NUMERIC(10,2)
  height_cm : NUMERIC(10,2)
}

entity "Product Category" as product_category {
  PK(id) : INT
  FK(company_id) : INT
  name : VARCHAR(100)
}

entity "Reason" as reason {
  PK(id) : INT
  name : VARCHAR(100) <<unique>>
  type : VARCHAR(50)
  description : VARCHAR(255)
}

entity "Refresh Tokens" as refresh_tokens {
  PK(id) : INT
  refresh_token : VARCHAR(128) <<unique>>
  username : VARCHAR(255)
  valid : TIMESTAMP
}

entity "Tour" as tour {
  PK(id) : INT
  FK(driver_id) : INT
  FK(company_id) : INT
  FK(vehicle_id) : INT
  FK(loading_id) : INT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  start_date : TIMESTAMP
  end_date : TIMESTAMP
  status : VARCHAR(50)
  tour_number : VARCHAR(20) <<unique>>
}

entity "Unavailability" as unavailability {
  PK(id) : INT
  FK(driver_id) : INT
  FK(vehicle_id) : INT
  FK(reason_id) : INT
  FK(company_id) : INT
  start_date : TIMESTAMP
  end_date : TIMESTAMP
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "User" as user {
  PK(id) : INT
  FK(company_id) : INT
  email : VARCHAR(180) <<unique>>
  roles : JSON
  password : VARCHAR(255)
  first_name : VARCHAR(50)
  last_name : VARCHAR(50)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "Vehicle" as vehicle {
  PK(id) : INT
  FK(company_id) : INT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  license_plate : VARCHAR(50)
  weight : NUMERIC(10,2)
  volume : NUMERIC(10,2)
}

entity "Warehouse" as warehouse {
  PK(id) : INT
  FK(address_id) : INT
  FK(company_id) : INT
  name : VARCHAR(100)
}

' Définition des relations entre les entités
company ||--o{ client : "possède"
company ||--o{ client_order : "possède"
company ||--o{ delivery : "possède"
company ||--o{ driver : "employe"
company ||--o{ geocoded_address : "possède"
company ||--o{ product : "possède"
company ||--o{ product_category : "possède"
company ||--o{ tour : "possède"
company ||--o{ unavailability : "possède"
company ||--o{ user : "possède"
company ||--o{ vehicle : "possède"
company ||--o{ warehouse : "possède"

client ||--o{ client_order : "passe"
client_order ||--o{ delivery : "contient"

tour ||--o{ delivery : "contient"

delivery ||--o{ delivery_product : "inclut"

driver ||--o{ tour : "conduit"
driver ||--o{ unavailability : "a"

vehicle ||--o{ tour : "utilisé par"
vehicle ||--o{ unavailability : "a"

geocoded_address ||--o{ delivery : "associe à"
geocoded_address ||--o{ warehouse : "localisé à"

product ||--o{ delivery_product : "est dans"

product_category ||--o{ product : "classifié comme"

reason ||--o{ unavailability : "causé par"

warehouse ||--o{ tour : "charge"

user ||--o{ company : "appartient à"

@enduml